# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/Localizer--main--1.2
#

2005-06-03 11:53:28 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-11

    Summary:
      fix zgettext
    Revision:
      Localizer--main--1.2--patch-11


    modified files:
     Changelog zgettext.py


2005-06-03 10:05:02 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-10

    Summary:
      stop using "N_", now unicode strings are extracted
    Revision:
      Localizer--main--1.2--patch-10


    modified files:
     Changelog LanguageManager.py LocalContent.py LocalFolder.py
     LocalPropertyManager.py Localizer.py MessageCatalog.py
     Utils.py zgettext.py


2005-05-23 18:06:35 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-9

    Summary:
      update to last changes in itools.gettext
    Revision:
      Localizer--main--1.2--patch-9


    modified files:
     Changelog LocalFiles.py


2005-05-14 19:31:16 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-8

    Summary:
      update to the last itools/iHotfix (itools.gettext.domains)
    Revision:
      Localizer--main--1.2--patch-8


    modified files:
     Changelog Gettext.py LanguageManager.py LocalContent.py
     LocalFiles.py LocalFolder.py LocalPropertyManager.py
     Localizer.py LocalizerSupport.py MessageCatalog.py


2005-05-08 17:50:36 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-7

    Summary:
      fix import of the PO handler (itools 0.9)
    Revision:
      Localizer--main--1.2--patch-7


    modified files:
     Changelog MessageCatalog.py


2005-05-08 17:45:17 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-6

    Summary:
      merge fixes from the 1.1 branch
    Revision:
      Localizer--main--1.2--patch-6

    Patches applied:
    
     * jdavid@itaapy.com--public/Localizer--main--1.1--patch-31
       fix "LPM.get_available_languages" when property is empty
    
     * jdavid@itaapy.com--public/Localizer--main--1.1--patch-32